写真集のテスト

--- a/templates/index.html
+++ b/templates/index.html
@@ -364,4 +364,5 @@
 <p><a href="/profile">メンバー情報を見る（PDF）</a></p>
 <p><a href="/entry">イベント参加フォーム</a></p>
 <p><a href="/about">FC.Roseの紹介を見る</a></p>
+<p><a href="{{ url_for('photo') }}">ロゼ写真集</a></p>
 
