--- a/templates/photo.html
+++ b/templates/photo.html
@@ -4,16 +4,117 @@
     <meta charset="UTF-8">
     <title>ロゼ写真集</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <style>
+        /* 写真をまとめるギャラリー */
+        .photo-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        /* 各写真ブロック */
+        .photo-item {
+            text-align: center;
+            width: 300px;
+        }
+
+        /* 写真スタイル */
+        .photo-item img {
+            width: 300px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+
+        .photo-item img:hover {
+            transform: scale(1.05);
+        }
+
+        /* キャプション */
+        .photo-item figcaption {
+            margin-top: 8px;
+            font-size: 14px;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
     <h1 style="text-align:center; color: hotpink;">ロゼ写真集</h1>
 
-    <div style="text-align:center; margin-top: 50px;">
-        <a href="https://photos.app.goo.gl/cdCwiymScWWgDY5U9" target="_blank">
-            <img src="{{ url_for('static', filename='images/syasinsyu/1okasitukuri.JPG') }}" 
-                 alt="ロゼ写真集" 
-                 style="width:300px; height:auto; cursor:pointer;">
-        </a>
+    <div class="photo-gallery">
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/PZdZ4PPuDSSS4j6p9" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2025natugassyuku.jpeg') }}" alt="2025 夏合宿">
+            </a>
+            <figcaption>2025 夏合宿</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/WhSFg5QhUDRR5Am67" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2025.8drive.jpeg') }}" alt="2025 8月ドライブ">
+            </a>
+            <figcaption>2025 8月ドライブ</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/LBbzu8uXwoa7Ef5Y7" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2025yomiran.jpeg') }}" alt="2025 8月よみうりランド">
+            </a>
+            <figcaption>2025 8月よみうりランド</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/4adtBRvx4JBL2LpG8" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2okasitukuri.jpeg') }}" alt="第2回お菓子作り大会">
+            </a>
+            <figcaption>第2回 お菓子作り大会</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/qhzRWHi6VzXDGxNE6" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2025sinkangassyuku.jpeg') }}" alt="2025 新歓合宿">
+            </a>
+            <figcaption>2025 新歓合宿</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/tZThviwuTM3og95q8" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2025.5BBQ.jpeg') }}" alt="2025 5月BBQ">
+            </a>
+            <figcaption>2025 5月 BBQ</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/cdCwiymScWWgDY5U9" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/1okasitukuri.jpeg') }}" alt="第1回お菓子作り">
+            </a>
+            <figcaption>第1回 お菓子作り</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/FM4jQToikzzk2xpX8" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2025harugassyuku.jpeg') }}" alt="2025 春合宿">
+            </a>
+            <figcaption>2025 春合宿</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/yWXPnGxijAxc6sQ59" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2025bowling.JPG') }}" alt="2025 ボウリング">
+            </a>
+            <figcaption>2025 ボウリング</figcaption>
+        </figure>
+
+        <figure class="photo-item">
+            <a href="https://photos.app.goo.gl/TuYxHm8pghsDV27" target="_blank">
+                <img src="{{ url_for('static', filename='images/syasinsyu/2024.12taikaigassyuku.jpeg') }}" alt="2024 12月大会合宿">
+            </a>
+            <figcaption>2024 12月 大会合宿</figcaption>
+        </figure>
     </div>
 </body>
 </html>
