--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
             margin-bottom: 20px;
             font-size: 20px;
         }
-        
+
         /* サブ説明文 */
         .login-box .note {
             margin-bottom: 20px;
@@ -69,14 +69,14 @@
             font-size: 14px;
         }
         .login-box {
-            transform: scale(1.3); /* 1.0=通常、1.3=30%拡大 */
+            transform: scale(2.3); /* 1.0=通常、1.3=30%拡大 */
         }
     </style>
 </head>
 <body>
     <div class="login-box">
         <h2>パスワードを入力してください</h2>
-        <p class="note">パスワードは全体グループのノートから確認できます。</p>
+        <p class="note">パスワードは全体グループの「ノート」から確認できます！</p>
         <form method="POST">
             <input type="password" name="password" placeholder="パスワード">
             <button type="submit">ログイン</button>
