“メニュー改変1”

--- a/templates/index.html
+++ b/templates/index.html
@@ -246,11 +246,13 @@
     <!-- メニュー本体 -->
     <nav class="menu" id="menu">
         <div class="close-btn">✕</div>
-        <a href="#">サークルの説明</a>
-        <a href="#">メンバー情報</a>
-        <a href="#">幹部マニュアル</a>
-        <a href="#">サークルへの提案フォーム</a>
-        <a href="#">ロゼ写真集</a>
+        <a href="/about">サークルの説明</a>
+        <a href="https://forms.gle/YrcrBgRyub1ftP4L8" target="_blank">サークルへの提案フォーム</a>
+        <a href="/profile">メンバー情報</a>
+        <a href="#">イベント参加フォーム</a>
+        <a href="/photo">ロゼ写真集</a>
+        <a href="/quiz_home">ロゼ検定</a>
+        <a href="{{ url_for('manual') }}">幹部マニュアル</a>
         <a href="https://www.instagram.com/meiji_fc.rose?igsh=MTl0Njk3cGJtdXVhZw%3D%3D&utm_source=qr" target="_blank">📷 Instagram</a>
     </nav>
 
