“イベント改変1

--- a/templates/index.html
+++ b/templates/index.html
@@ -249,7 +249,7 @@
         <a href="/about">サークルの説明</a>
         <a href="https://forms.gle/YrcrBgRyub1ftP4L8" target="_blank">サークルへの提案フォーム</a>
         <a href="/profile">メンバー情報</a>
-        <a href="#">イベント参加フォーム</a>
+        <a href="/event">イベント参加フォーム</a>
         <a href="/photo">ロゼ写真集</a>
         <a href="/quiz_home">ロゼ検定</a>
         <a href="{{ url_for('manual') }}">幹部マニュアル</a>
